--- a/app/src/main/res/layout/activity_nav.xml
+++ b/app/src/main/res/layout/activity_nav.xml
@@ -20,6 +20,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_nav"
-        app:menu="@menu/activity_nav_drawer" />
+        app:menu="@menu/activity_nav_drawer" >
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
