--- a/app/src/main/res/menu/activity_nav_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_drawer.xml
@@ -8,6 +8,13 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
+
+        <item
+            android:id="@+id/nav_routes"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_routes">
+        </item>
+
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -21,18 +28,5 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
 
 </menu>
