--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -9,15 +9,123 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    >
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/textView"
-        style="@style/word_title"
+    <LinearLayout
+        android:id="@+id/vly"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
-</LinearLayout>
+        android:layout_height="181dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:orientation="horizontal"
+        android:paddingTop="20px"
+        android:weightSum="3">
+
+        <LinearLayout
+            android:id="@+id/ly"
+            android:layout_width="match_parent"
+            android:layout_height="181dp"
+            android:layout_weight="2"
+            android:background="@drawable/map"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:id="@+id/ly1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20px"
+                    android:fontFamily="@font/aclonica"
+                    android:text="Informacion del viaje"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ly2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ly1"
+                android:orientation="horizontal"
+                android:paddingLeft="5px"
+                android:paddingRight="5px"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20px"
+                android:layout_weight="1"
+                android:fontFamily="@font/aclonica"
+                android:text="Origen " />
+
+            <LinearLayout
+                android:id="@+id/ly3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ly2"
+                android:orientation="horizontal"
+                android:paddingLeft="5px"
+                android:paddingRight="5px">
+
+                <TextView
+                    android:id="@+id/origen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:layout_weight="1"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10px"
+                android:layout_weight="1"
+                android:fontFamily="@font/aclonica"
+                android:text="Destino  " />
+
+            <LinearLayout
+                android:id="@+id/ly4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ly3"
+                android:orientation="horizontal"
+                android:paddingLeft="5px"
+                android:paddingRight="5px">
+
+                <TextView
+                    android:id="@+id/destino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:layout_weight="1"
+
+                    android:textDirection="ltr" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="59dp"
+                android:layout_height="46dp"
+                android:layout_gravity="right|bottom"
+                android:background="@drawable/mapf"
+                android:fontFamily="@font/aclonica"
+                android:text="Ver" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+</RelativeLayout>
