--- a/app/src/main/res/layout/nav_header_navegation.xml
+++ b/app/src/main/res/layout/nav_header_navegation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@android:color/background_dark"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -24,13 +24,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:shadowColor="#00F0EBEB"
         android:text="@string/nav_header_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#00FDF7F7"
+        android:textColorHighlight="#00FDFAFA"
+        android:textColorHint="#00AC7070" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:shadowColor="#00E6E1E1"
         android:text="@string/nav_header_subtitle" />
 
 </LinearLayout>
