--- a/app/src/main/res/layout/nav_header_navegation.xml
+++ b/app/src/main/res/layout/nav_header_navegation.xml
@@ -32,7 +32,7 @@
         android:textColorHint="#00AC7070" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewTraveled"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="#00E6E1E1"
